--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "lint": "yarn lint:js"
   },
   "dependencies": {
+    "@nuxtjs/axios": "^5.13.1",
     "@nuxtjs/firebase": "^7.4.1",
     "@nuxtjs/pwa": "^3.3.5",
     "core-js": "^3.8.3",
     "firebase": "^8.2.6",
-    "nuxt": "^2.14.12"
+    "nuxt": "^2.14.12",
+    "vue-click-outside": "^1.1.0"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^5.0.0",
